[gd_scene load_steps=47 format=2]

[ext_resource path="res://characters/Ox_Anna/run/run_02.png" type="Texture" id=1]
[ext_resource path="res://characters/Ox_Anna/run/run_08.png" type="Texture" id=2]
[ext_resource path="res://characters/Ox_Anna/run/run_09.png" type="Texture" id=3]
[ext_resource path="res://characters/Ox_Anna/run/run_06.png" type="Texture" id=4]
[ext_resource path="res://characters/Ox_Anna/run/run_03.png" type="Texture" id=5]
[ext_resource path="res://characters/Ox_Anna/run/run_11.png" type="Texture" id=6]
[ext_resource path="res://characters/Ox_Anna/run/run_07.png" type="Texture" id=7]
[ext_resource path="res://characters/Ox_Anna/run/run_10.png" type="Texture" id=8]
[ext_resource path="res://characters/Ox_Anna/idle/idle_01.png" type="Texture" id=9]
[ext_resource path="res://characters/Ox_Anna/run/run_01.png" type="Texture" id=11]
[ext_resource path="res://characters/Ox_Anna/run/run_05.png" type="Texture" id=12]
[ext_resource path="res://characters/Ox_Anna/idle/idle_02.png" type="Texture" id=13]
[ext_resource path="res://characters/Ox_Anna/Ox_Anna.gd" type="Script" id=14]
[ext_resource path="res://characters/Ox_Anna/run/run_04.png" type="Texture" id=15]
[ext_resource path="res://characters/Ox_Anna/run/run_12.png" type="Texture" id=16]
[ext_resource path="res://characters/Ox_Anna/gore/gore_01.png" type="Texture" id=17]
[ext_resource path="res://characters/Ox_Anna/gore/gore_02.png" type="Texture" id=18]
[ext_resource path="res://characters/Ox_Anna/gore/gore_04.png" type="Texture" id=19]
[ext_resource path="res://characters/Ox_Anna/gore/gore_03.png" type="Texture" id=20]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_04.png" type="Texture" id=21]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_02.png" type="Texture" id=22]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_06.png" type="Texture" id=23]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_01.png" type="Texture" id=24]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_03.png" type="Texture" id=25]
[ext_resource path="res://characters/Ox_Anna/knockdown/knockdown_05.png" type="Texture" id=26]

[sub_resource type="CircleShape2D" id=2]
radius = 70.0583

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 80.5714 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "get-up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 22 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "moo" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=15]
resource_name = "gore"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.25, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 18 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "knockdown"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 24 ), ExtResource( 22 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 23 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_knocked_down"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.44
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 16 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "get-up"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "gore"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "knockdown"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=6]
states/get-up/node = SubResource( 24 )
states/get-up/position = Vector2( 603.813, 85.615 )
states/gore/node = SubResource( 17 )
states/gore/position = Vector2( 920, 265.625 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 475.5, 266 )
states/knockdown/node = SubResource( 20 )
states/knockdown/position = Vector2( 929.625, 85 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 724, 265.25 )
transitions = [ "idle", "run", SubResource( 12 ), "run", "gore", SubResource( 18 ), "gore", "run", SubResource( 19 ), "run", "knockdown", SubResource( 21 ), "knockdown", "get-up", SubResource( 25 ), "get-up", "idle", SubResource( 26 ) ]
start_node = "idle"
graph_offset = Vector2( 290.925, 52.1475 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[node name="Ox_Anna" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 11 )

[node name="AttackCircle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCircle"]
position = Vector2( 100, -20 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 11.4286, 17.1429 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/get-up = SubResource( 23 )
anims/gore = SubResource( 15 )
anims/idle = SubResource( 8 )
anims/knockdown = SubResource( 16 )
anims/run = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 7 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="AttackCircle" to="." method="_on_AttackCircle_area_entered"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
